@@ -1,5 +1,9 @@
 .407
   - Add full-text search methods (thx DBIx::TextIndex)
+  - Much cleaner interface to ExtID - Persistent classes now assert
+    themselves as ExtID. ExtID->assert only needs to be used
+    directly in the case of self-referential tables.
+  - Add new features to docs.
 
 .406
   - Fix for detection of missing RCS binaries
